--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
 		"isolatedModules": true,
 		"noEmit": true,
 
+		"baseUrl": "./",
+		"paths": {
+			"@chat-app/shared/*": ["shared/*"]
+		},
+
 		/* Linting / Quality */
 		"strict": true,
 		"noUnusedLocals": true,
