--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
 		"mongoose": "^8.20.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.5",
 		"@types/node": "^24.10.1",
 		"tsx": "^4.20.6"
