--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,27 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"main": "src/index.ts",
-	"type": "module",
-	"scripts": {
-		"dev": "tsx watch src/index.ts",
-		"build": "tsc"
-	},
-	"dependencies": {
-		"bcryptjs": "^3.0.3",
-		"cors": "^2.8.5",
-		"dotenv": "^17.2.3",
-		"express": "^5.1.0",
-		"jose": "^6.1.2",
-		"mongoose": "^8.20.0"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.19",
-		"@types/express": "^5.0.5",
-		"@types/node": "^24.10.1",
-		"tsx": "^4.20.6"
-	}
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "type": "module",
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jose": "^5.2.3",
+    "mongoose": "^8.2.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
+  }
 }
