--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,15 @@
 {
-	"extends": "../tsconfig.json",
 	"compilerOptions": {
+		"target": "ES2020",
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"outDir": "./dist",
-		"types": ["node", "express"]
+		"rootDir": "./src",
+		"strict": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules"]
 }
